[package]
authors = ["Cobrand <cobrandw@gmail.com>"]
name = "reliudp"
version = "0.2.0"
edition = "2018"

description = "A custom Reliable UDP protocol for Rust"
license = "MIT"

keywords = ["udp", "networking", "multiplayer"]
categories = ["network-programming"]
repository = "https://github.com/Cobrand/reliudp"

[dependencies]
byteorder = "1.3.4"
crc = "1.8.1"
fnv = "1.0.7"
itertools = "0.9.0"
hex = "0.4.2"
log = "0.4.8"
